Express_MongoDB_V6/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    project: modou-ndiaye
    environment: production
